name:                  pvp3
version:               0.0.1
synopsis:              Bytecode Verification Engine 
description:           Submission for the Project 3 of the course on Program Verification at Utrecht University.
category:              Verification
copyright:             2013 Utrecht University
author:                Jaap van der Plas, Danny Bergsma
stability:             doubtful
homepage:              http://www.cs.uu.nl/docs/vakken/pv/1213/stuffs/PV_P3_1213.pdf
tested-with:           GHC == 7.4.1
build-type:            Custom
cabal-version:         >= 1.8
extra-source-files:    AUTHORS, README.md, uuagc_options,
                       src/PV3/Condition/ConditionAST.ag, src/PV3/Condition/ConvertToSBV.ag, src/PV3/Condition/External.ag, src/PV3/Condition/Extract.ag, src/PV3/Condition/Replace.ag
                       src/PV3/Program/ProgramAST.ag, src/PV3/Program/NumberOfLoops.ag
                       src/PV3/WP.ag 
                       src/PV3/Verification.hs
                       src/PV3/Examples/Simple.hs, src/PV3/Examples/Assignment.hs, src/PV3/Examples/ReturnFromAnywhere.hs, src/PV3/Examples/Bounded.hs, src/PV3/Examples/Bounded2.hs, src/PV3/Examples/Bounded3.hs, src/PV3/Examples/Bounded4.hs, src/PV3/Examples/Bounded5.hs, src/PV3/Examples/AnotherExample.hs

executable verify
  main-is:             Main.hs
  build-depends:       base, cco >= 0.0.4, uuagc >= 0.9.40.3, uuagc-cabal >= 1.0.3.0, sbv == 2.9, containers
  other-modules:       PV3.Condition.ConditionAST, PV3.Condition.ConvertToSBV, PV3.Condition.External, PV3.Condition.Extract, PV3.Condition.Replace, PV3.Program.ProgramAST, PV3.Program.NumberOfLoops, PV3.WP, PV3.Verification, PV3.Examples.Simple, PV3.Examples.Assignment, PV3.Examples.ReturnFromAnywhere, PV3.Examples.Bounded, PV3.Examples.Bounded2, PV3.Examples.Bounded3, PV3.Examples.Bounded4, PV3.Examples.Bounded5, PV3.Examples.AnotherExample
  hs-source-dirs:      src